--- a/src/assets/scss/components/_pokemon.scss
+++ b/src/assets/scss/components/_pokemon.scss
@@ -11,6 +11,14 @@
             gap: 2rem;
             align-items: center;
 
+            background-color: map-get($colors, "light-grass-green");
+
+            padding: .786rem 1.126rem;
+
+            border-radius: .456rem;
+
+            color: map-get($colors, "blue");
+
             &-name {
                 font-size: 2.165rem;
                 font-weight: bold;
@@ -24,8 +32,15 @@
         }
 
         &__about {
+            background-color: map-get($colors, "light-grass-green");
+
+            padding: .786rem 1.126rem;
+
+            border-radius: .456rem;
+
             &-item {
                 font-size: 1.562rem;
+                color: map-get($colors, "blue");
                 span {
                     font-weight: bold;
                 }
@@ -39,19 +54,37 @@
                 align-items: start;
                 gap: 1.256rem;
 
+                background-color: map-get($colors, "light-grass-green");
+
+                padding: .786rem 1.126rem;
+
+                border-radius: .456rem;
                 &-title {
                     margin: 0;
 
                     font-size: 1.256rem;
                     font-weight: bold;
+
+                    color: map-get($colors, "blue");
                 }
 
                 &-group {
                     display: flex;
                     flex-wrap: wrap;
+                    align-items: start;                        
 
-                    gap: .236rem;
-                }
+                    color: map-get($colors, "blue");
+
+                    gap: .426rem;
+                    
+                    &-item {                                             
+                        &-name {
+                            border: 1px solid map-get($colors, "blue");
+                            padding: .636rem .526rem;
+                            border-radius: .656rem;
+                        }
+                    }
+                }                
             }
         }
     }
