feat: stylish fail #1

--- a/src/assets/scss/generics/_home.scss
+++ b/src/assets/scss/generics/_home.scss
@@ -9,3 +9,20 @@
 
     background-color: map-get($colors, "dark-grass-green");
 }
+
+.fail {
+    &-component {
+        background-color: map-get($colors, "red");
+        border-radius: .456rem;
+        padding: 1rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: .326rem;
+        font-size: 1.126rem;
+        box-sizing: border-box;
+        color: map-get($colors, "white");
+    }
+}
