--- a/src/assets/scss/components/_pokemon.scss
+++ b/src/assets/scss/components/_pokemon.scss
@@ -78,10 +78,19 @@
                     gap: .426rem;
                     
                     &-item {                                             
-                        &-name {
+                        &-button {
+                            color: inherit;
                             border: 1px solid map-get($colors, "blue");
                             padding: .636rem .526rem;
                             border-radius: .656rem;
+                            background-color: map-get($colors, "light-grass-green");
+                            transition: 0.5s;
+                            cursor: pointer;
+
+                            &:hover,
+                            &:focus {
+                                filter: brightness(1.15);                                
+                            }
                         }
                     }
                 }                
