refactor: component to display abilities #3

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -6,5 +6,6 @@
 
 @import './scss/components/search';
 @import './scss/components/pokemon';
+@import './scss/components/abilities';
 
 @import './scss/generics/home';
